- epgsearch now autodetects an installed pin plugin or graphtft, also the optional libraries
  libpcre und libtre (can be turned off by commenting AUTOCONFIG in the Makefile)
- new patch vdr.epgsearch-exttimeredit.diff:
  this patch against VDR integrates epgsearch's timer edit menu to VDR's timer menu, thanks 
  S:oren@vdr-portal for providing it.
fixes:
- fixed a crash when pressing 'Ok' in an empty timers done menu
- fixed a crash when using the progressbar and events with 0 duration exist, thanks 
  to egal@vdrportal
- when an incomplete recording triggers a search timer update for a search timer 
  with 'avoid repeats' now running events are ignored for the repeats.
- now using cCondWait::Wait instead of cCondWait:SleepMs to avoid shutdown problems,
  thanks to e9hack@vdrportal for providing a patch
- fixed line breaks in SVDRP command LSTT, thanks to Andreas Mair for providing a 
  patch
- improved response time when canceling the search timer thread
- fixed a segfault occurring when navigating to a userdefined epg menu that has expired
  in the meantime, thanks to Mike Constabel for reporting
- the day selection menu in the timer edit menu was hidden

2008-04-29: Version 0.9.24
new:
- support for vdr-1.6.x/1.7.x
- speedup in searching and search timer updates (about 25%)
- speedup in EPG menues, thanks to patch authors from http://www.open7x0.org
- support for VDRSymbols font (activate it with 'WarEagle=1' in epgsearchmenu.conf)
- the EPG command 'Search in recordings' now evaluates the info.vdr instead of the
  recordings path name and also does fuzzy searching, suggested by Mase@vdrportal
- search timers with action 'switch only' and switch timers now have an additional 
  option 'unmute sound' which unmutes audio at the event, if it was off, suggested 
  by Michael Brückner
- the timer update notification mails supports now an additional variable 
  %timer.modreason%, that holds the reason for a timer update in plain text (see