@@ -49,6 +49,8 @@ neu:
 - neuer Patch vdr.epgsearch-exttimeredit.diff:
   Dieser VDR-Patch integriert epgsearch's Timer-Edit-Menü in VDR's Timer-Menü, Danke dafür 
   an S:oren@vdr-portal.
+- einige Geschwindigkeitsverbesserungen, Danke an Tobias Bratfisch für die Patches
+
 fixes:
 - Absturz beim Drücken von 'Ok' in leerem Menü erledigter Timer behoben
 - Absturz bei Verwendung des Fortschrittsbalkens in Verbindung mit Sendungen
